WIP: fix namespacing, opera bug

--- a/less/tables.less
+++ b/less/tables.less
@@ -132,7 +132,8 @@ table {
 
 .table.listlines {
   tbody tr:hover td,
-  tbody tr:hover th {
+  tbody tr:hover th,
+  td.selected {
     background-color:#006DCC;
     color: white;
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
